coding challenge #6 to #10 of 50

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="f2.js"> </script>
-    <script src="f3.js"> </script>
-    <script src="f4.js"> </script>
-    <script src="f5.js"> </script>
+    <!-- <script src="f1.js"> </script> -->
+    <!-- <script src="f2.js"> </script> -->
+    <!-- <script src="f3.js"> </script> -->
+    <!-- <script src="f4.js"> </script> -->
+    <!-- <script src="f5.js"> </script> -->
+    <!-- <script src="f6.js"> </script> -->
+    <!-- <script src="f7.js"> </script> -->
+    <!-- <script src="f8.js"> </script> -->
+    <!-- <script src="f9.js"> </script> -->
+    <script src="f10.js"> </script>
 </body>
 </html>
