coding challenge #11 to #15 of 50

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <!-- <script src="f7.js"> </script> -->
     <!-- <script src="f8.js"> </script> -->
     <!-- <script src="f9.js"> </script> -->
-    <script src="f10.js"> </script>
+    <!-- <script src="f10.js"> </script> -->
+    <!-- <script src="f11.js"> </script> -->
+    <!-- <script src="f12.js"> </script> -->
+    <!-- <script src="f13.js"> </script> -->
+    <!-- <script src="f14.js"> </script> -->
+    <script src="f15.js"> </script>
 </body>
 </html>
