coding challenge #16 to #20 of 50

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <!-- <script src="f12.js"> </script> -->
     <!-- <script src="f13.js"> </script> -->
     <!-- <script src="f14.js"> </script> -->
-    <script src="f15.js"> </script>
+    <!-- <script src="f16.js"> </script> -->
+    <!-- <script src="f17.js"> </script> -->
+    <!-- <script src="f18.js"> </script> -->
+    <!-- <script src="f19.js"> </script> -->
+    <script src="f20.js"> </script>
 </body>
 </html>
