coding challenge #21 to #25 of 50

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <!-- <script src="f17.js"> </script> -->
     <!-- <script src="f18.js"> </script> -->
     <!-- <script src="f19.js"> </script> -->
-    <script src="f20.js"> </script>
+    <!-- <script src="f20.js"> </script> -->
+    <!-- <script src="f21.js"> </script> -->
+    <!-- <script src="f22.js"> </script> -->
+    <!-- <script src="f23.js"> </script> -->
+    <!-- <script src="f24.js"> </script> -->
+    <script src="f25.js"> </script>
 </body>
 </html>
