coding challenge #25 to #30 of 50

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     <!-- <script src="f22.js"> </script> -->
     <!-- <script src="f23.js"> </script> -->
     <!-- <script src="f24.js"> </script> -->
-    <script src="f25.js"> </script>
+    <!-- <script src="f25.js"> </script> -->
+    <!-- <script src="f26.js"> </script> -->
+    <!-- <script src="f27.js"> </script> -->
+    <!-- <script src="f28.js"> </script> -->
+    <!-- <script src="f29.js"> </script> -->
+    <script src="f30.js"> </script>
 </body>
 </html>
