coding challenge #31 to #34 of 50

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <!-- <script src="f27.js"> </script> -->
     <!-- <script src="f28.js"> </script> -->
     <!-- <script src="f29.js"> </script> -->
-    <script src="f30.js"> </script>
+    <!-- <script src="f30.js"> </script> -->
+    <!-- <script src="f31.js"> </script> -->
+    <!-- <script src="f32.js"> </script> -->
+    <!-- <script src="f33.js"> </script> -->
+    <script src="f34.js"> </script>
 </body>
 </html>
